[package]
name = "splinter"
version = "0.1.0"
edition = "2021"
description = "sync and visualize data from pipeline tools and adjacent systems"
license = "MIT"
homepage = "https://github.com/kmpzr/splinter"
documentation = "https://github.com/kmpzr/splinter"
repository = "https://github.com/kmpzr/splinter"
authors = ["kmpzr <to@kmpzr.one>"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
serde_yaml = "0.8"
log = "0.4.20"
env_logger = "0.11.2"
tokio-postgres = "0.7.10"
anyhow = "1.0.80"
dotenvy = "0.15.7"
serde-aux = "4.5.0"
base64 = "0.22.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
